--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 build
 apps/results
 apps/files
-apps/__pycache__
+**/__pycache__
 compile_commands.json
 .vimrc
 diffvg.egg-info
 dist
-__pycache__
+.venv
+.venv_test
 .DS_Store
