--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,40 @@
-[tool.poetry]
-name = "diffvg"
-version = "0.1.0"
-description = ""
-authors = ["Marco Lee <marco@goodnotesapp.com>"]
-
-[tool.poetry.dependencies]
-python = ">=3.8"
-pygame = "^2.0.1"
-
-[tool.poetry.dev-dependencies]
-torch = "^1.8.1"
-torchvision = "^0.11.3"
-numpy = "^1.20.2"
-scikit-image = "^0.19.3"
-svgwrite = "^1.4.1"
-svgpathtools = "^1.4.1"
-cssutils = "^2.2.0"
-numba = "^0.55.2"
-torch-tools = "^0.1.5"
-visdom = "^0.1.8"
-cmake = "^3.18.4"
-
 [build-system]
-requires = ["poetry-core>=1.0.0a5"]
-build-backend = "poetry.core.masonry.api"
+requires = [
+  "scikit-build-core>=0.9",
+  "pybind11>=2.10"
+]
+build-backend = "scikit_build_core.build"
+
+[project]
+name = "diffvg"
+version = "0.2.0"
+description = "Differentiable Vector Graphics rasterizer (PyTorch bindings)"
+readme = "README.md"
+requires-python = ">=3.10"
+license = {file = "LICENSE"}
+authors = [{ name = "Tzu-Mao Li et al." }]
+keywords = ["graphics", "differentiable", "vector", "rasterizer", "pytorch"]
+dependencies = [
+  "svgpathtools>=1.4",
+  "cssutils>=2.2.0",
+  "matplotlib>=3.0"
+]
+
+[project.urls]
+Homepage = "https://github.com/Hemistone/diffvg"
+Repository = "https://github.com/Hemistone/diffvg"
+Issues = "https://github.com/Hemistone/diffvg/issues"
+
+[tool.scikit-build]
+wheel.packages = ["pydiffvg"]
+build.verbose = true
+
+[tool.scikit-build.sdist]
+exclude = [
+  ".venv*",
+  "**/.venv*",
+  "dist",
+  "build",
+  ".git",
+  ".github"
+]
