--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,7 @@ if(DIFFVG_CUDA)
                     endif()
                 endforeach()
                 if(_ARCHS_FILTERED STREQUAL "")
-                    message(WARNING "No supported GPU arch >= 70 found in '${CMAKE_CUDA_ARCHITECTURES}' for CUDA ${CUDAToolkit_VERSION}. Using 89. Set -DCMAKE_CUDA_ARCHITECTURES=75;86;89 to customize.")
+                    message(STATUS "No supported GPU arch >= 70 found in '${CMAKE_CUDA_ARCHITECTURES}' for CUDA ${CUDAToolkit_VERSION}. Using 89. Set -DCMAKE_CUDA_ARCHITECTURES=75;86;89 to customize.")
                     set(CMAKE_CUDA_ARCHITECTURES 89 CACHE STRING "CUDA architectures" FORCE)
                 else()
                     if(NOT _ARCHS_FILTERED STREQUAL "${CMAKE_CUDA_ARCHITECTURES}")
